examples/test/testpolicy8341.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8341
  namespace: namespace495
spec:
  podSelector:
    matchLabels:
      key6: value17
      key4: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value32
          key8: value21
      podSelector:
        matchLabels:
          key14: value41
          key44: value44
